--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "chai": "^4.2.0",
     "cross-env": "^5.2.0",
     "css-loader": "2.1.1",
+    "element-ui": "^2.13.2",
     "file-loader": "^4.2.0",
     "gh-pages": "^2.1.1",
     "gulp": "^4.0.2",
@@ -59,7 +60,7 @@
   },
   "scripts": {
     "dev": "vue-cli-service serve",
-    "build:test": "vue-cli-service build", 
+    "build:test": "vue-cli-service build",
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs",
     "clean": "rimraf lib",
